install(DIRECTORY ru DESTINATION ${LOCAL_INSTALL_DIR}/templates/ COMPONENT infra DIRECTORY_PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_WRITE GROUP_READ WORLD_EXECUTE WORLD_WRITE WORLD_READ)
install(DIRECTORY us DESTINATION ${LOCAL_INSTALL_DIR}/templates/ COMPONENT infra DIRECTORY_PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_WRITE GROUP_READ WORLD_EXECUTE WORLD_WRITE WORLD_READ)
