configure_file(cron_config.in	"${CRON_PROJECT_DIR}/${MAIN_DOMAIN_NAME}")
configure_file(health.in	"${CRON_PROJECT_DIR}/health")

install(FILES		"${CRON_PROJECT_DIR}/health"
	DESTINATION	${CRON_INSTALL_DIR}
	PERMISSIONS	OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
)

install(FILES		"${CRON_PROJECT_DIR}/${MAIN_DOMAIN_NAME}"
	DESTINATION	${CRON_INSTALL_DIR}
)